[package]
name = "klais"
version = "0.1.0"
edition = "2021"
authors = ["KLAIS Research Team"]
description = "Kernel-Level Adaptive Intelligence System for IoT Data Plane Management"
license = "MIT"
readme = "README.md"

[lib]
name = "klais"
path = "src/lib.rs"

[[bin]]
name = "klais"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "tracing", "sync", "time", "net", "io-util", "macros", "rt-multi-thread"] }

# eBPF (Linux only)
libbpf-rs = { version = "0.23", optional = true }

# Kafka
rdkafka = { version = "0.36", features = ["cmake-build"] }

# ML Inference
ort = { version = "2.0", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rkyv = { version = "0.7", features = ["validation"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"

# HTTP API
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Utilities
parking_lot = "0.12"
crossbeam = "0.8"
smallvec = "1.11"
thiserror = "1.0"
anyhow = "1.0"
bytes = "1.5"
dashmap = "5.5"
once_cell = "1.19"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
proptest = "1.4"

[features]
default = []
ebpf = ["libbpf-rs"]
ml = ["ort"]
full = ["ebpf", "ml"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
debug = true

[[bench]]
name = "throughput"
harness = false
